--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "repository": "git@github.com:fabiencelier/react-course-indecision-app.git",
   "author": "fabien <fabien.celier@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "serve" : "live-server public/",
+    "build" : "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+  },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.1"
   }
 }
