--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "fabien <fabien.celier@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "serve" : "live-server public/",
-    "build" : "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "serve": "live-server public/",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   }
 }
