--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "validator": "^10.9.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
