--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "live-server": "^1.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.7.1",
     "validator": "^10.9.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
